nohup.out
Connected successfully to server
Fri, 17 Nov 2017 04:54:37 GMT express deprecated req.param(name): Use req.params, req.body, or req.query instead at app.js:65:10
undefined:1
<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
^

SyntaxError: Unexpected token <
    at Object.parse (native)
    at Request._callback (/root/server/app.js:80:27)
    at Request.self.callback (/root/server/node_modules/request/request.js:187:22)
    at emitTwo (events.js:87:13)
    at Request.emit (events.js:172:7)
    at Request.<anonymous> (/root/server/node_modules/request/request.js:1044:10)
    at emitOne (events.js:77:13)
    at Request.emit (events.js:169:7)
    at IncomingMessage.<anonymous> (/root/server/node_modules/request/request.js:965:12)
    at emitNone (events.js:72:20)
    at IncomingMessage.emit (events.js:166:7)
